app/styles/template_messenger.scss
.messenger.is-minimized {
  height: 50px;
}
.messenger {
  width: 275px;
  height: 400px;
  position: absolute;
  bottom: 0px;
  right: 5%;
  transition: height .4s;
  .header {
    height: 50px;
    padding: 10px;
    text-align: center;
    border-bottom: 1px solid #fff;
    color: #fefefe;
    background-color: rgba(0, 136, 255, 0.8);
    .back, .minimize-toggle {
      top: 0px;
      height: 50px;
      position: absolute;
      width: 20%;
      box-sizing: border-box;
      transition: color 0.2s, rotateX .3s;
      // transition: all .2s;
    }
    .back:hover, .minimize-toggle:hover {
      color: rgba(0, 100, 0, 0.6);
      cursor: pointer;
    }
    .back {
      left: 0px;
      font-size: 25px;
      padding: 7px 10px 10px 10px;
    }
    .minimize-toggle {
      right: 0px;
      font-size: 24px;
      padding: 11px 10px 10px 10px;
      line-height: 7px;
    }
    .minimize-toggle.is-minimized {
      transform: rotate(90deg);
    }
  }
  .body {
    height: calc(100% - 50px);
    overflow: hidden;
    width: 100%;
    border-left: 1px solid rgba(0, 136, 255, 0.8);
    border-right: 1px solid rgba(0, 136, 255, 0.8);;
    .body-inner-wrapper {
      width: 200%;
      height: 100%;
    }
    .threads, .messages {
      position: static;
      transition: all .4s;
      width: 50%;
      height: 100%;
      float: left;
    }
    .threads {
      overflow-y: scroll;
      background-color: #fff;
      .row.newThread {
        border-bottom: 1px solid rgba(0, 136, 255, 0.8);
        .name {
          width: 80%;
          font-size: 16px;
          color: rgba(0,100,0,.7);
          border: none;
          padding: 10px;
          box-sizing: border-box;
          float: left;
          height: 47px;
        }
        .submit {
          height: 100%;
          width: 20%;
          font-size: 35px;
          color: #fff;
          border: none;
          background-color: rgba(0, 136, 255, 0.6);
          box-sizing: border-box;
          border-left: 1px solid rgba(0, 136, 255, 0.6);
          transition: all .2s;
        }
        .submit:hover {
          color: rgba(0, 100, 0, 0.6);
          background-color: #fff;
          cursor: pointer;
        }
      }
      .thread {
        padding: 10px;
        border-bottom: 1px solid #fff;
        background-color: rgba(0, 136, 255, 0.3);
        transition: all .3s;
        color: rgba(0, 136, 255, 1);
        .name {
          width: 90%;
          float: left;
        }
        .arrow {
          float: left;
          width: 10%;
          color: #fff;
        }
      }
      .thread:hover {
        cursor: pointer;
        background-color: rgba(0, 136, 255, 0.5);
        color: rgba(0, 100, 200, 1);
      }
    }
    .threads.show {
      margin-left: 0px;
    }
    .threads.hide {
      margin-left: -275px;
    }
    .messages.show {
      left: 0px;
    }
    .messages.hide {
      left: 275px;
    }
    .messages {
      .messages-body {
        height: calc(100% - 47px);
        overflow-y: scroll;
      }
      .newMessage {
        height: 47px;
        box-sizing: border-box;
        width: 273px;
        .name {
          width: 80%;
          font-size: 16px;
          color: rgba(0, 100, 0, 0.7);
          border: none;
          padding: 10px;
          box-sizing: border-box;
          float: left;
          height: 47px;
        }
        .submit {
          height: 47px;
          width: 20%;
          font-size: 25px;
          color: rgba(0,136,255,1);
          background-color: #fff;;
          box-sizing: border-box;
          transition: all 0.2s;
          border: none;
        }
        .submit:hover {
          color: rgba(0, 100, 0, 0.6);
          background-color: #fff;
          cursor: pointer;
        }
      }
      .row.message {
        padding: 10px;
        width: 100%;
        .col.body {
          border: none;
        }
      }
      .row.message.type-admin {
        border-left: 2px solid rgba(0, 136, 255, 0.8);
        text-align: left;
        color: rgba(0, 136, 255, 1);
      }
      .row.message.type-student {
        border-right: 2px solid rgba(0, 136, 255, 0.8);
        color: rgba(0, 0, 0, 0.8);
        text-align: right;
      }
    }
  }
}

